--- a/react/src/style/style.scss
+++ b/react/src/style/style.scss
@@ -17,12 +17,43 @@
 @import "../../node_modules/bootstrap/scss/print";
 @import "../../node_modules/bootstrap/scss/button-group";
 @import "../../node_modules/bootstrap/scss/dropdown";
+//@import "../../node_modules/bootstrap/scss/list-group";
 @import "../../node_modules/bootstrap/scss/alert";
 
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
 
 @import "_custom";
+
+
+.wrapper {
+  overflow: hidden;
+  height: 100%;
+  height: 100vh;
+
+}
+
+
+.canvas-body {
+  height: 100%;
+  &:after {
+    transition: .3s opacity;
+    position:absolute;
+    left: 0;
+    top: 0;
+    background: #000;
+    opacity: 0;
+    content: '';
+  }
+  &.active {
+    &:after {
+      height: 100%;
+      width: 100%;
+      opacity: .3;
+    }
+  }
+}
+
 //@import "style";
 //@import "crud/details";
 //@import "crud/table";
