--- a/react/src/style/hamburgers/hamburgers.scss
+++ b/react/src/style/hamburgers/hamburgers.scss
@@ -11,9 +11,9 @@
 // ==================================================
 $hamburger-padding-x           : 15px !default;
 $hamburger-padding-y           : 15px !default;
-$hamburger-layer-width         : 40px !default;
-$hamburger-layer-height        : 4px !default;
-$hamburger-layer-spacing       : 6px !default;
+$hamburger-layer-width         : 30px !default;
+$hamburger-layer-height        : 3px !default;
+$hamburger-layer-spacing       : 3px !default;
 $hamburger-layer-color         : #000 !default;
 $hamburger-layer-border-radius : 4px !default;
 $hamburger-hover-opacity       : 0.7 !default;
@@ -30,37 +30,37 @@ $hamburger-active-hover-filter: $hamburger-hover-filter !default;
 // Types (Remove or comment out what you don’t need)
 // ==================================================
 $hamburger-types: (
-  //3dx,
-  //3dx-r,
-  //3dy,
-  //3dy-r,
-  //3dxy,
-  //3dxy-r,
-  //arrow,
-  //arrow-r,
-  //arrowalt,
-  //arrowalt-r,
+  3dx,
+  3dx-r,
+  3dy,
+  3dy-r,
+  3dxy,
+  3dxy-r,
+  arrow,
+  arrow-r,
+  arrowalt,
+  arrowalt-r,
   arrowturn,
   arrowturn-r,
-  //boring,
-  //collapse,
-  //collapse-r,
-  //elastic,
-  //elastic-r,
-  //emphatic,
-  //emphatic-r,
-  //minus,
-  //slider,
-  //slider-r,
-  //spin,
-  //spin-r,
-  //spring,
-  //spring-r,
-  //stand,
-  //stand-r,
-  //squeeze,
-  //vortex,
-  //vortex-r
+  boring,
+  collapse,
+  collapse-r,
+  elastic,
+  elastic-r,
+  emphatic,
+  emphatic-r,
+  minus,
+  slider,
+  slider-r,
+  spin,
+  spin-r,
+  spring,
+  spring-r,
+  stand,
+  stand-r,
+  squeeze,
+  vortex,
+  vortex-r
 ) !default;
 
 // Base Hamburger (We need this)
@@ -84,8 +84,8 @@ $hamburger-types: (
 //@import "types/boring";
 //@import "types/collapse";
 //@import "types/collapse-r";
-//@import "types/elastic";
-//@import "types/elastic-r";
+@import "types/elastic";
+@import "types/elastic-r";
 //@import "types/emphatic";
 //@import "types/emphatic-r";
 //@import "types/minus";
