--- a/react-material/src/routes/manage/questions/style.scss
+++ b/react-material/src/routes/manage/questions/style.scss
@@ -14,3 +14,8 @@
     margin-right: .5rem;
   }
 }
+
+.question-choice {
+  // background-color: red !important;
+  margin-right: .5rem !important;
+}
