--- a/react-play/src/style/style.scss
+++ b/react-play/src/style/style.scss
@@ -5,6 +5,7 @@
 // Optional
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
+@import "../../node_modules/bootstrap/scss/custom-forms";
 //@import "../../node_modules/bootstrap/scss/images";
 //@import "../../node_modules/bootstrap/scss/code";
 @import "../../node_modules/bootstrap/scss/grid";
@@ -16,7 +17,7 @@
 //@import "../../node_modules/bootstrap/scss/print";
 //@import "../../node_modules/bootstrap/scss/button-group";
 //@import "../../node_modules/bootstrap/scss/dropdown";
-//@import "../../node_modules/bootstrap/scss/alert";
+@import "../../node_modules/bootstrap/scss/alert";
 //@import "../../node_modules/bootstrap/scss/list-group";
 //@import "../../node_modules/bootstrap/scss/badge";
 //@import "../../node_modules/bootstrap/scss/close";
