--- a/react-play/src/style/_variables.scss
+++ b/react-play/src/style/_variables.scss
@@ -1,5 +1,7 @@
 
 $primary: color-level("teal", -5);
+$secondary: #d5a4e9;
+// $secondary: #e9a4b8;
 
 $theme-colors: ();
 $theme-colors: map-merge(
