--- a/react-play/src/style/style.scss
+++ b/react-play/src/style/style.scss
@@ -18,9 +18,10 @@
 //@import "../../node_modules/bootstrap/scss/button-group";
 //@import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/alert";
-//@import "../../node_modules/bootstrap/scss/list-group";
+@import "../../node_modules/bootstrap/scss/list-group";
 //@import "../../node_modules/bootstrap/scss/badge";
 // @import "../../node_modules/bootstrap/scss/close";
+@import "../../node_modules/bootstrap/scss/media";
 //
 //
 //@import "../../node_modules/bootstrap/scss/navbar";
@@ -34,7 +35,6 @@
 @import "breadcrumb";
 @import "pagination";
 @import "progress";
-@import "media";
 @import "close";
 @import "modal";
 @import "tooltip";
