--- a/react-play/src/routes/live/live.scss
+++ b/react-play/src/routes/live/live.scss
@@ -181,11 +181,54 @@
   }
 }
 
+.play-view {
+  position: relative;
+  flex-grow: 1;
+  padding: 5rem .5rem 1rem;
+  overflow-y: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .wait-view {
   flex-grow: 1;
   padding: 1rem;
   overflow-y: auto;
   padding-top: 5rem;
+}
+
+.info-view {
+  flex-grow: 1;
+  padding: 5rem 1.5rem 1rem;
+  overflow-y: auto;
+  // padding-top: 5rem;
+  width: 100%;
+
+  .list {
+    padding: 0;
+    list-style: none;
+    margin: 0 -1.25rem;
+
+    .item {
+      padding: .5rem 1.25rem; // .5rem 1.25rem;
+
+      .item-title {
+        margin-bottom: .25rem;
+      }
+
+      .item-value {
+        display: flex;
+        line-height: normal;
+        align-items: center;
+        // font-weight: bold;
+        .item-icon {
+          margin-right: .5rem;
+          font-size: 1.4em;
+        }
+      }
+    }
+  }
 }
 
 .teams-view {
@@ -221,4 +264,109 @@
       font-size: 1.25em;
     }
   }
+}
+
+.answers {
+  //column-count: 2;
+  //column-gap: 1.25rem;
+  //orphans: 1;
+  //widows: 1;
+  //// flex-grow: .75;
+
+  .choice {
+    background-color: theme-color(primary);
+    padding: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    text-align: center;
+    transition: .3s all ease;
+    // height: 100%;
+    min-height: 6rem;
+    margin-bottom: 15px;
+
+    &.active {
+      background-color: theme-color-level(primary, 6);
+    }
+  }
+}
+
+//.answers {
+//  display: grid;
+//  grid-template-columns: 1fr 1fr;
+//  // grid-template-rows: 1fr 1fr;
+//  flex-grow: .75;
+//  .choice {
+//    background: theme-color(primary);
+//    display: flex;
+//    // flex-direction: column;
+//    align-items: center;
+//    height: 100%;
+//    flex-grow: 1;
+//    text-align: center;
+//    // justify-content: center;
+//    transition: .3s all ease-in;
+//
+//    * {
+//      margin: 0 auto;
+//    }
+//
+//    &.active {
+//      // transform: scale(1.5) translateX(60px);
+//      background: #478875;
+//    }
+//
+//    &:focus {
+//      box-shadow: 0 0 0 0 #000, 0 0 0 0 #000;
+//    }
+//  }
+//}
+
+.test {
+  position: relative;
+  background: $white;
+
+  &1:after {
+    position: absolute;
+    content: '';
+    height: 40%;
+    width: 40%;
+    top: 60%;
+    left: 60%;
+    background: theme-color(primary);
+    border-top-left-radius: 100%;
+    opacity: .15;
+  }
+
+  &:after {
+    position: absolute;
+    content: '';
+    overflow: hidden;
+    top: calc(100% - 100px);
+    left: calc(100% - 250px);
+    /* width: 40%; */
+    /* height: 10px; */
+    /* border-right: 30px solid black; */
+    border-bottom: 100px solid theme-color(secondary);
+    border-left: 250px solid transparent;
+    z-index: 1;
+    opacity: .15;
+  }
+
+  &:before {
+    position: absolute;
+    content: '';
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    /* width: 40%; */
+    /* height: 10px; */
+    /* border-right: 30px solid black; */
+    border-bottom: 100px solid transparent;
+    border-left: 250px solid theme-color(secondary);
+    z-index: 1;
+    opacity: .15;
+  }
+
 }
