--- a/react-play/src/style/themes/primary/_variables.scss
+++ b/react-play/src/style/themes/primary/_variables.scss
@@ -1,10 +1,8 @@
 
 $primary: color-level("teal", -5);
 $secondary: #d5a4e9;
-// $secondary: #e9a4b8;
 
-$white:   #f1f1ef; // white;
-//$white:   #e6e9f0; // white;
+$white:   #f1f1ef;
 
 $theme-colors: ();
 $theme-colors: map-merge(
