--- a/react-play/src/style/themes/dark/_card.scss
+++ b/react-play/src/style/themes/dark/_card.scss
@@ -1,8 +1,10 @@
-@import "../../style/core";
+@import "./core";
 
 .card {
+  $bg: $dark; //lighten($dark, 10);
   position: relative;
-  background-color: gray("100");
+  background-color: $bg;
+  color: color-yiq($bg);
   padding: .375rem .5rem;
   // border: 1px solid;
   box-shadow: 2px 2px 1px 2px theme-color-level(primary, 6);
@@ -23,6 +25,26 @@
       box-shadow: 2px 2px 1px 2px theme-color-level($color, 3);
       // color: theme-color-level($color, -9);
       // @include button-secondary-outline-variant($value);
+    }
+
+    &-#{$color} {
+      $col: theme-color-level($color, 0);
+      display: flex;
+      flex-direction: column;
+      word-wrap: break-word;
+      position: relative;
+
+      border: 1px solid rgba(0, 0, 0, 0.125);
+      border-radius: .25rem;
+
+      background-color: $col;
+      color: color-yiq($col);
+
+      padding: .375rem .5rem;
+      // border: 1px solid;
+      box-shadow: 2px 2px 1px 2px theme-color-level($color, 6);
+      // box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
+      transition: .25s ease border-radius;
     }
   }
 
@@ -47,9 +69,9 @@
 
   }
 
-  .close {
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-  }
+}
+.close {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
