added Game Status Route /api/v2/play/{game}/status added Game Question History Route /api/v2/play/{game}/history Changed storage to only use localStorage instead of using sessionStorage as well

--- a/react-play/src/style/themes/dark/_live.scss
+++ b/react-play/src/style/themes/dark/_live.scss
@@ -377,6 +377,11 @@
     background: theme-color-level(primary, 0);
   }
 }
+.alternate-secondary {
+  & > *:nth-child(even) {
+    background: theme-color-level(secondary, 0);
+  }
+}
 //@each $color, $value in $theme-colors {
 //  .alternate-#{$color} {
 //
